



add_library(config_manager SHARED 
            config_manager.cpp
            ParseAstarConfig.cpp
            ParseLogConfig.cpp
            ParseMapManagerConfig.cpp
            ParsePlanManagerConfig.cpp
            ParseRuntimeMangerConfig.cpp
            ParseSafetyManagerConfig.cpp
            )